@@ -1,6 +1,9 @@
 shady-KISS-skin History
 -------------------------------------------
 
+2016-03-19:
+- Added thumbs for extras in plug-plex-detail
+
 2016-03-18:
 - Some more stuff for plex
 
